Squashed commit of the following:
commit 8e167d8a4ae42ef690c8aac731baa36815dd9d8c
Merge: fe36930 2a28883
Author: CCXXXI <ccxxxi@qq.com>
Date:   Mon Jun 21 01:19:24 2021 +0800

    Merge branch 'main' into branch

commit fe369300d7f7fdae152098a43cb1f8547fd8cedb
Merge: 5a33c4e cffd363
Author: CCXXXI <ccxxxi@qq.com>
Date:   Mon Jun 21 01:17:25 2021 +0800

    Merge branch 'main' into branch

commit 5a33c4e295df03fcc037fc2bf09502c5e9992f8b
Author: CCXXXI <ccxxxi@qq.com>
Date:   Mon Jun 21 01:16:59 2021 +0800

    nanumpenscriptregular -> jetbrains_mono

commit 91a0d5103694cfb229b73aa5e640f769c7b94fca
Author: CCXXXI <ccxxxi@qq.com>
Date:   Mon Jun 21 01:16:14 2021 +0800

    gitignore .idea/misc.xml

    <entry key="..\:/Data/Github Desktop Documents/sql-project-android/app/src/main/res/layout/activity_feature2.xml" value="0.23055555555555557" />

commit cffd36316505d5228661d8b907be6612f7759842
Author: CCXXXI <ccxxxi@qq.com>
Date:   Mon Jun 21 00:53:38 2021 +0800

    upgrade gradle (#4)

    * upgrade gradle

    AS 抱怨称版本不匹配

    * Restyled by whitespace

    Co-authored-by: Restyled.io <commits@restyled.io>

commit 4cebaa2f83601b7db8301c77c5b14f22dc04b770
Author: CCXXXI <ccxxxi@qq.com>
Date:   Mon Jun 21 00:42:05 2021 +0800

    Create codeql-analysis.yml

commit 3e93e7582f2fddaa1a63a6eb847c805646c9c27f
Author: CCXXXI <ccxxxi@qq.com>
Date:   Mon Jun 21 00:40:53 2021 +0800

    upgrade gradle

    AS 抱怨称版本不匹配

--- a/app/src/main/res/layout/profilefragment.xml
+++ b/app/src/main/res/layout/profilefragment.xml
@@ -225,7 +225,7 @@
         <Button
             android:id="@+id/advancedplanBtn"
             style="@style/SAIMaterialButton"
-            android:layout_width="160dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Advanced Plan" />
     </LinearLayout>
