--- a/app/src/main/res/layout/activity_feature1.xml
+++ b/app/src/main/res/layout/activity_feature1.xml
@@ -56,11 +56,12 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
         android:text="Search"
+        android:textColor="@color/accent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/cameraBtn"
-        app:layout_constraintHorizontal_bias="0.603"
+        app:layout_constraintHorizontal_bias="0.571"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/resultText"
-        app:layout_constraintVertical_bias="0.292" />
+        app:layout_constraintVertical_bias="0.248" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
